src/riot-stage/deploy/10-riot-stage-deploy.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: riot
  namespace: riot-stage
  annotations:
  labels:
    app: riot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riot
  template:
    metadata:
      labels:
        app: riot
    spec:
      containers:
      - image: gcr.io/wiresafe-project/riot-stage:latest
        imagePullPolicy: Always
        name: riot
        ports:
        - containerPort: 80
