src/riot-stage/deploy/30-riot-stage-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  namespace: riot-stage
  name: riot
  annotations:
    kubernetes.io/ingress.global-static-ip-name: stage-chat-wiresafe-com
    kubernetes.io/ingress.class: gce
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: stage.chat.wiresafe.com
    http:
      paths:
      - backend:
          serviceName: riot
          servicePort: http
  tls:
    - hosts:
      - stage.chat.wiresafe.com
      secretName: stage-chat-wiresafe-com-tls
