src/riot-stage/deploy/deploy-riot-stage.yaml
##
# deploy wiresafe/riot-web-stage with Kubernetes in gke
##
---
##
# Namespace: riot-stage
##
kind: Namespace
apiVersion: v1
metadata:
  name: riot-stage
---
##
# deployment: riot-stage/riot
##
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: riot
  namespace: riot-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riot
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: riot
    spec:
      containers:
      - image: gcr.io/wiresafe-project/riot-web-wiresafe-stage:latest
        name:  riot-stage
        ports:
        - containerPort: 80
          name: http
---
##
# service: riot-stage/riot
##
apiVersion: v1
kind: Service
metadata:
  name: riot
  namespace: riot-stage
  labels:
    app: riot
spec:
  selector:
    app: riot
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: http
---
##
# ingress: riot-stage/riot
##
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: riot
  namespace: riot-stage
  annotations:
    kubernetes.io/ingress.global-static-ip-name: stage-chat-wiresafe-com
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: true
spec:
  tls:
  - secretName: stage-chat-wiresafe-com-tls
    hosts:
    - stage.chat.wiresafe.com
  backend:
    serviceName: riot
    servicePort: http
  rules:
  - host: stage.chat.wiresafe.com
    http:
        paths:
        - backend:
            serviceName: riot
            servicePort: http
